# FHTW-2023-02-BSYS

./: .gitignore  CMakeLists.txt  README.md  loremipsum.txt
myfind/: CMakeLists.txt
myfind/src/: myfind.c
myfind/test/: myfind_test.cpp
mypopen/: CMakeLists.txt
mypopen/src/: mypopen.c  mypopen.h
mypopen/test/: mypopen.test.c
ring_buffer/: CMakeLists.txt  loremipsum.txt
ring_buffer/include/: common.h
ring_buffer/src/: common.c  receiver.c  sender.c
